Fix the layer panel style - Set the display to flex to remain two columns on mobile - Set max-height to 60vh to prevent overflowing - Set z-index to 3000 to cover the hightlight selector

--- a/Web Extension/Shared/Resources/content/extra.css
+++ b/Web Extension/Shared/Resources/content/extra.css
@@ -6,3 +6,13 @@
     margin: 3px 5px;
 }
 
+/* Fix the layer panel with flexbox */
+.leaflet-control-layers-expanded > section.leaflet-control-layers-list {
+    display: flex;
+    max-height: 60vh;
+}
+
+/* Fix the confliction of top-right panel and highlight selector */
+.leaflet-top.leaflet-right:has(>.leaflet-control-layers-expanded) {
+    z-index: 3000;
+}
